--- a/src/main/resources/templates/crearCuenta.html
+++ b/src/main/resources/templates/crearCuenta.html
@@ -34,8 +34,8 @@
     	<small id="edadAyuda" class="form-text text-muted">Edad</small>
 	  </div>
 	  <div class="form-group">
-	    <label for="passwordInput1">Contraseña</label>
-	    <input type="password" th:field="*{password1}" class="form-control" id="passwordInput1" required="true"/>
+	    <label for="passwordInput">Contraseña</label>
+	    <input type="password" th:field="*{password}" class="form-control" id="passwordInput" required="true"/>
 	  </div>
 	  <div class="form-group">
 	    <label for="passwordInput2">Repita la contraseña</label>
