--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,8 +24,8 @@
 	    <input type="email" th:field="*{email}" class="form-control" id="emailInput" required="true"/>
 	  </div>
 	  <div class="form-group">
-	    <label for="passwordInput1">Contraseña</label>
-	    <input type="password" th:field="*{password1}" class="form-control" id="passwordInput1" required="true"/>
+	    <label for="passwordInput">Contraseña</label>
+	    <input type="password" th:field="*{password}" class="form-control" id="passwordInput" required="true"/>
 	  </div>
 	  <a href="/crear_cuenta">Crear cuenta</a>
 	  <div class="text-right">
