--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,38 +13,36 @@
     <body>
 	  <div class="container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar">
-		  <a class="navbar-brand" href="#">Retos, Gamificación y Analíticas</a>
+		  <a class="navbar-brand" href="/menu">Retos, Gamificación y Analíticas</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 		
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Link</a>
-		      </li>
+		    <ul class="navbar-nav mr-auto" th:if="${usuario != null}">		      
 		      <li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Dropdown
+		          Opciones
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">Action</a>
-		          <a class="dropdown-item" href="#">Another action</a>
+		          <a class="dropdown-item" href="#">Retos</a>
+		          <a class="dropdown-item" href="#">Gamificación</a>
 		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Something else here</a>
+		          <a class="dropdown-item" href="#">Analíticas</a>
 		        </div>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#">Disabled</a>
-		      </li>
 		    </ul>
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Búsqueda" aria-label="Search"/>
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-		    </form>
+		    <ul class="nav navbar-nav ml-auto justify-content-end">
+		    	<li class="nav-item" th:if="${usuario != null}">
+	                <a class="nav-link" href="#">Hola, <span th:utext="${usuario.nombre}"></span></a>
+	            </li>
+	            <li class="nav-item" th:if="${usuario != null}">
+			        <a class="nav-link" href="/logout">Cerrar Sesión<span class="sr-only">(current)</span></a>
+			      </li>
+	            <li class="nav-item">
+	                <a class="nav-link" href="/informacion">Acerca de</a>
+	            </li>
+        	</ul>
 		  </div>
 		</nav>
 		<!-- Optional JavaScript -->
