--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,24 +16,27 @@
   <body>
   <div class="container col-12">
   	<nav th:replace="fragments/navbar :: navbar"></nav>
-
-	<form class="formulario col-11 col-sm-8 col-md-4" action="#" th:action="@{/iniciar_sesion}" th:object="${usuario}" method="post">
+	
+	<form class="formulario col-11 col-sm-8 col-md-4" th:action="@{/login}" method="POST">
 	  <h1>Iniciar Sesión</h1>
 	  <div class="form-group">
-	    <label for="emailInput">Correo electrónico</label>
-	    <input type="email" th:field="*{email}" class="form-control" id="emailInput" required="true"/>
+	    <label for="email">Correo electrónico</label>
+	    <input type="email" class="form-control" name="email" id="email" required="true"/>
 	  </div>
 	  <div class="form-group">
-	    <label for="passwordInput">Contraseña</label>
-	    <input type="password" th:field="*{password}" class="form-control" id="passwordInput" required="true"/>
+	    <label for="password">Contraseña</label>
+	    <input type="password" class="form-control" name="password" id="password" required="true"/>
 	  </div>
-	  <a href="/crear_cuenta">Crear cuenta</a>
+	  <div th:if="${param.error}">
+		<p class="error">Usuario o contraseña incorrectos</p>
+	  </div>
 	  <div class="text-right">
 	  	<button type="submit" class="btn btn-orange">Iniciar Sesión</button>
 	  </div>
+	  <div class="enlace-inicio">
+	  	<a href="/registro">Crear cuenta</a>
+	  </div>	  
 	</form>
-
-	<footer th:replace="fragments/footer :: footer"></footer>
 	
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
