enctype en los formularios no tiene que ver con la codificación de caracteres

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -24,7 +24,7 @@
 	  </button>
 	</div>
   	
-	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" action="#" th:action="@{/registro}" th:object="${dtoUsuario}" method="POST" enctype="utf8">	
+	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" action="#" th:action="@{/registro}" th:object="${dtoUsuario}" method="POST">
 	  <h1>Crear cuenta</h1>
 	  <div class="form-group">
 	  	<label for="nombre">Nombre</label>
