--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -29,12 +29,12 @@
 	  <div class="form-group">
 	  	<label for="nombre">Nombre</label>
 		<input type="text" th:field="*{nombre}" class="form-control" id="nombre"/>
-		<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message"></label>
+		<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="apellidos">Apellidos</label>
 		<input type="text" th:field="*{apellidos}" class="form-control" id="apellidos" />
-		<label th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="validation-message"></label>
+		<label th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="validation-message error"></label>
 	  </div>
 	  
 	  <div class="form-group">
@@ -42,18 +42,18 @@
 	    <select class="form-control" id="rol" th:field="*{rol}">
 	      <option th:each="rol : ${roles}"
                             th:value="${rol.id}"
-                            th:utext="${rol.rol}"/>
+                            th:utext="${rol.nombre}"/>
 	    </select>
 	  </div>
 	  <div class="form-group">
 	  	<label for="email">Correo electrónico</label>
 	  	<input type="email" th:field="*{email}" class="form-control" id="email"/>
-	  	<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="validation-message"></label>
+	  	<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="password">Contraseña</label>
 	  	<input type="password" th:field="*{password}" class="form-control" id="password"/>
-	  	<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
+	  	<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="confirmarPassword">Confirmar contraseña</label>
