--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
 		<p class="error">Usuario o contraseña incorrectos</p>
 	  </div>
 	  <div class="text-right">
-	  	<button type="submit" class="btn btn-orange">Iniciar Sesión</button>
+	  	<button type="submit" class="btn btn-naranja">Iniciar Sesión</button>
 	  </div>
 	  <div class="enlace-inicio">
 	  	<a href="/registro">Crear cuenta</a>
