--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -54,7 +54,7 @@
 	  </div>
 
       <div class="text-right">
-	  	<button type="submit" class="btn btn-orange">Registrarse</button>
+	  	<button type="submit" class="btn btn-naranja">Registrarse</button>
 	  </div>
 	  
 	  <div class="enlace-inicio">
