--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,6 +11,10 @@ div.container{
 	padding: 0px;	
 }
 
+.navbar-dark{
+	background: #212529;
+}
+
 .formulario{
 	padding: 4% 5% 3%;
 	margin: 8% auto 2%;
@@ -72,7 +76,8 @@ td:last-child, thead th:last-child{
 }
 
 i{
-	margin: 0px 5px;
+	vertical-align: middle;
+	margin: 0px 5px 5px 5px;
 }
 
 .icono-naranja{
@@ -84,9 +89,28 @@ i{
 }
 
 .icono-verde{
-	color: #64DD17;
+	color: #00E676;
+	
 }
 .icono-verde:hover{
 	color: #00C853;
 	cursor: pointer;
+}
+
+.alert-verde{
+	background: #2C3034;
+	color: #00E676;
+}
+
+.alert-rojo{
+	background: #2C3034;
+	color: #FF1744;
+}
+.alert-rojo>a{
+	color: #FF1744;
+	text-decoration: underline;
+}
+
+.alert>button>span{
+	color: #FFFFFF;
 }
