--- a/src/main/resources/templates/asignaturas.html
+++ b/src/main/resources/templates/asignaturas.html
@@ -9,8 +9,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet" />
@@ -18,13 +19,7 @@
   <body>
   <div class="container col-12">
   	<nav th:replace="fragments/navbar :: navbar"></nav>
-  	
-  	<div th:class="'alert alert-' + (${mensaje.tipo}) + ' alert-dismissible fade show collapse'" id="collapseAlert" role="alert" th:if="${mensaje} != null">
-  	<strong th:text="${mensaje.cabecera}"></strong><span th:text="${mensaje.contenido}"></span>
-	  <button type="button" class="close" data-toggle="collapse" href="#collapseAlert" aria-label="Close">
-	    <span aria-hidden="true">&times;</span>
-	  </button>
-	</div>
+  	<div th:replace="fragments/mensaje :: mensaje"></div>
   	
   	<div class="tabla col-12 col-md-10">
   		<h1 class="titulo">Mis Asignaturas</h1>
@@ -45,7 +40,7 @@
 		      <td th:text="${asignatura.grupo}"></td>
 		      <td th:text="${asignatura.curso}"></td>
 		      <td>
-		      	<a ><i class="material-icons icono-verde">border_color</i></a>
+		      	<a ><i class="material-icons icono-verde">create</i></a>
 		      	<a th:href="@{/asignaturas/eliminar(id=${asignatura.id})}"><i class="material-icons icono-naranja">delete</i></a>		      	
 		      </td>
 		    </tr>
