--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,19 +10,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous" />
     
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
   <div class="container col-12">
   	<nav th:replace="fragments/navbar :: navbar"></nav>
-  	
-	<div class="alert alert-success alert-dismissible fade show col-11 col-sm-9 col-md-5" role="alert" th:if="${usuarioRegistrado} == true">
-	  <strong>¡Enhorabuena!</strong> Se ha registrado con éxito. Inicie sesión con su correo electrónico
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-	    <span aria-hidden="true">&times;</span>
-	  </button>
-	</div>
+  	<div th:replace="fragments/mensaje :: mensaje"></div>
 	
 	<form class="formulario col-11 col-sm-8 col-md-4" th:action="@{/login}" method="POST">
 	  <h1>Iniciar Sesión</h1>
