--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous" />
     
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet" />
   </head>
@@ -34,8 +37,8 @@
 	    <label for="rol">Rol</label>
 	    <select class="form-control" id="rol" th:field="*{rol}">
 	      <option th:each="rol : ${roles}"
-                            th:value="${rol.id}"
-                            th:utext="${rol.nombre}"/>
+                            th:value="${rol}"
+                            th:utext="${rol}"/>
 	    </select>
 	  </div>
 	  <div class="form-group">
