Vista asignatura insertada. Insertar alumno para una asignatura. Relacion ManyToMany incluida entre Usuario y Asignatura

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -75,6 +75,16 @@ td:last-child, thead th:last-child{
 	text-align: center;
 }
 
+table a{
+	color: #FF8F00;
+	font-weight: bold;
+}
+
+table a:hover{
+	color: #EF6C00;
+	text-decoration: none;
+}
+
 i{
 	vertical-align: middle;
 	margin: 0px 5px 5px 5px;
