--- a/src/main/resources/templates/asignaturas.html
+++ b/src/main/resources/templates/asignaturas.html
@@ -36,11 +36,11 @@
 		  <tbody>
 		    <tr th:each="asignatura : ${asignaturas}">
 		      <th scope="row" th:text="${asignatura.id}"></th>
-		      <td th:text="${asignatura.nombre}"></td>
+		      <td><a th:text="${asignatura.nombre}" th:href="@{/asignatura(id=${asignatura.id})}"></a></td>
 		      <td th:text="${asignatura.grupo}"></td>
 		      <td th:text="${asignatura.curso}"></td>
 		      <td>
-		      	<a ><i class="material-icons icono-verde">create</i></a>
+		      	<a data-toggle="modal" data-target="#modalModificarAsignatura"><i class="material-icons icono-verde">create</i></a>
 		      	<a th:href="@{/asignaturas/eliminar(id=${asignatura.id})}"><i class="material-icons icono-naranja">delete</i></a>		      	
 		      </td>
 		    </tr>
@@ -53,7 +53,7 @@
 			    <td></td>
 			    <td>
 			      	<!-- Button trigger modal -->
-					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#exampleModalCenter">
+					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevaAsignatura">
 						Nueva Asignatura
 					</button>
 				</td>
@@ -62,8 +62,8 @@
 		</table>
 	</div>	
 	
-	<!-- Modal -->
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<!-- Modal Nueva Asignatura -->
+	<div class="modal fade" id="modalNuevaAsignatura" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 	  <div class="modal-dialog modal-dialog-centered" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
@@ -95,6 +95,44 @@
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
 	        <button type="submit" class="btn btn-naranja" form="insertar-asignatura">Añadir Asignatura</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	
+	<!-- Modal Modificar Asignatura -->
+	<div class="modal fade" id="modalModificarAsignatura" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	  <div class="modal-dialog modal-dialog-centered" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLongTitle">Modificar Asignatura</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	        <form class="formulario form-crear-cuenta" id="insertar-asignatura" action="#" th:action="@{/asignatura/modificar}" th:object="${dtoAsignatura}" method="POST">
+			  <div class="form-group">
+			  	<label for="nombre">Nombre</label>
+				<input type="text" th:field="*{nombre}" th:value="${dtoAsignatura.nombre}" class="form-control" id="nombre"/>
+				<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message error"></label>
+			  </div>
+			  <div class="form-group">
+			  	<label for="grupo">Grupo</label>
+				<input type="text" th:field="*{grupo}" th:value="${dtoAsignatura.grupo}" class="form-control" id="grupo" />
+				<label th:if="${#fields.hasErrors('grupo')}" th:errors="*{grupo}" class="validation-message error"></label>
+			  </div>
+			  
+			   <div class="form-group">
+			  	<label for="curso">Curso</label>
+			  	<input type="text" th:field="*{curso}" th:value="${dtoAsignatura.curso}" class="form-control" id="curso"/>
+			  	<label th:if="${#fields.hasErrors('curso')}" th:errors="*{curso}" class="validation-message error"></label>
+			  </div>  
+			</form>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+	        <button type="submit" class="btn btn-naranja" form="insertar-asignatura">Modificar Asignatura</button>
 	      </div>
 	    </div>
 	  </div>
