Codigo refactorizado, herencia aplicada a usuario (profesor, alumno), por su diferente relacion con la entidad asignatura. Vista de la lista de asignaturas diferenciada por roles.

--- a/src/main/resources/templates/asignaturas.html
+++ b/src/main/resources/templates/asignaturas.html
@@ -30,7 +30,8 @@
 		      <th scope="col">Nombre</th>
 		      <th scope="col">Grupo</th>
 		      <th scope="col">Curso</th>
-		      <th scope="col">Acciones</th>
+		      <th scope="col" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">Acciones</th>
+		      <th scope="col" th:if="${usuario.rol == T(tfg.modelo.Rol).Alumno}">Profesor</th>
 		    </tr>
 		  </thead>
 		  <tbody>
@@ -39,9 +40,11 @@
 		      <td><a th:text="${asignatura.nombre}" th:href="@{/asignatura(id=${asignatura.id})}"></a></td>
 		      <td th:text="${asignatura.grupo}"></td>
 		      <td th:text="${asignatura.curso}"></td>
-		      <td>
+		      <td th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
 		      	<a data-toggle="modal" data-target="#modalModificarAsignatura"><i class="material-icons icono-verde">create</i></a>
 		      	<a th:href="@{/asignaturas/eliminar(id=${asignatura.id})}"><i class="material-icons icono-naranja">delete</i></a>		      	
+		      </td>
+		      <td th:if="${usuario.rol == T(tfg.modelo.Rol).Alumno}" th:text="${asignatura.profesor.nombre} + ' ' + ${asignatura.profesor.apellidos}">		      	
 		      </td>
 		    </tr>
 		  </tbody>
@@ -53,7 +56,7 @@
 			    <td></td>
 			    <td>
 			      	<!-- Button trigger modal -->
-					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevaAsignatura">
+					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevaAsignatura" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
 						Nueva Asignatura
 					</button>
 				</td>
