--- a/src/main/resources/templates/asignatura.html
+++ b/src/main/resources/templates/asignatura.html
@@ -70,7 +70,7 @@
 	        </button>
 	      </div>
 	      <div class="modal-body">
-	        <form class="formulario form-crear-cuenta" id="insertar-asignatura" action="#" th:action="@{/asignatura/alta-alumno}" th:object="${dtoUsuario}" method="POST">
+	        <form class="formulario form-crear-cuenta" id="insertar-asignatura" action="#" th:action="@{/asignatura/{idAsignatura}/alta-alumno(idAsignatura=${asignatura.id})}" th:object="${dtoUsuario}" method="POST">
 			  <div class="form-group">
 			    <label for="email">Correo electrónico</label>
 			    <input type="email" class="form-control" name="email" id="email" required="true"/>
