--- a/src/main/resources/templates/crearCuenta.html
+++ b/src/main/resources/templates/crearCuenta.html
@@ -20,7 +20,7 @@
   <div class="container col-12">
   	<nav th:replace="fragments/navbar :: navbar"></nav>
   	
-	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" action="#" th:action="@{/registro}" th:object="${dtoUsuario}" method="POST">
+	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" action="#" th:action="@{/crear-cuenta}" th:object="${dtoUsuario}" method="POST">
 	  <h1>Crear cuenta</h1>
 	  <div class="form-group">
 	  	<label for="nombre">Nombre</label>
