--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,16 +13,13 @@
     <body>
 	  <div class="container">
 		<nav class="navbar navbar-expand-lg navbar-dark" th:fragment="navbar">
-		  <a class="navbar-brand" href="/menu">Retos, Gamificación y Analíticas</a>
+		  <a class="navbar-brand" href="/mis-asignaturas">Retos, Gamificación y Analíticas</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 		
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto" th:if="${usuario != null}">
-		      <li class="nav-item" th:if="${usuario != null}">
-	          	<a class="nav-link" href="/asignaturas">Mis Asignaturas</a>
-	          </li>
 		      <li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		          Opciones
@@ -40,10 +37,10 @@
 	                <a class="nav-link" href="#">Hola, <span th:utext="${usuario.nombre}"></span></a>
 	            </li>
 	            <li class="nav-item" th:if="${usuario != null}">
-			        <a class="nav-link" href="/logout"><i class="material-icons icono-naranja">power_settings_new</i><span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="/desconectar"><i class="material-icons icono-naranja">power_settings_new</i><span class="sr-only">(current)</span></a>
 			      </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="/informacion">Acerca de</a>
+	                <a class="nav-link" href="/acerca-de">Acerca de</a>
 	            </li>
         	</ul>
 		  </div>
