--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
   	<nav th:replace="fragments/navbar :: navbar"></nav>
   	<div th:replace="fragments/mensaje :: mensaje"></div>
 	
-	<form class="formulario col-11 col-sm-8 col-md-4" th:action="@{/login}" method="POST">
+	<form class="formulario col-11 col-sm-8 col-md-4" th:action="@{/iniciar-sesion}" method="POST">
 	  <h1>Iniciar Sesión</h1>
 	  <div class="form-group">
 	    <label for="email">Correo electrónico</label>
@@ -38,7 +38,7 @@
 	  	<button type="submit" class="btn btn-naranja">Iniciar Sesión</button>
 	  </div>
 	  <div class="enlace-inicio">
-	  	<a href="/registro">Crear cuenta</a>
+	  	<a href="/crear-cuenta">Crear cuenta</a>
 	  </div>	  
 	</form>
 	
