--- a/src/main/resources/templates/fragments/tablas.html
+++ b/src/main/resources/templates/fragments/tablas.html
@@ -12,7 +12,58 @@
   </head>
     <body>
 	  <div class="container">
-	  	<table class="table table-striped table-dark"  th:fragment="tablaRetos">
+	  	
+	  	<!-- TABLA MIS ASIGNATURAS -->
+	  	<table class="table table-striped table-dark" th:fragment="tablaMisAsignaturas">
+		  <thead>
+		    <tr>
+		      <th scope="col">Id</th>
+		      <th scope="col">Nombre</th>
+		      <th scope="col">Grupo</th>
+		      <th scope="col">Curso</th>
+		      <th scope="col" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">Acciones</th>
+		      <th scope="col" th:if="${usuario.rol == T(tfg.modelo.Rol).Alumno}">Profesor</th>
+		    </tr>
+		  </thead>
+		  <tbody th:if="${#lists.isEmpty(asignaturas)}">
+		    <tr>
+		      <td colspan="5">No hay asignaturas que mostrar</td>
+		    </tr>
+		  </tbody>
+		  <tbody th:if="${not #lists.isEmpty(asignaturas)}">
+		    <tr th:each="asignatura : ${asignaturas}">
+		      <th scope="row" th:text="${asignatura.id}"></th>
+		      <td><a th:text="${asignatura.nombre}" th:href="@{/asignatura(id=${asignatura.id})}"></a></td>
+		      <td th:text="${asignatura.grupo}"></td>
+		      <td th:text="${asignatura.curso}"></td>
+		      <td th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
+		      	<a data-toggle="modal" data-target="#modalModificarAsignatura"><i class="material-icons icono-verde">create</i></a>
+		      	<a th:href="@{/asignatura/eliminar(id=${asignatura.id})}"><i class="material-icons icono-naranja">delete</i></a>		      	
+		      </td>
+		      <td th:if="${usuario.rol == T(tfg.modelo.Rol).Alumno}" th:text="${asignatura.profesor.nombre} + ' ' + ${asignatura.profesor.apellidos}">		      	
+		      </td>
+		    </tr>
+		  </tbody>
+		  <tfoot>
+		    <tr>
+			    <td></td>
+			    <td></td>
+			    <td></td>
+			    <td></td>
+			    <td>
+			      	<!-- Button trigger modal -->
+					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevaAsignatura" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
+						Nueva Asignatura
+					</button>
+				</td>
+		    </tr>
+		  </tfoot>
+		</table>
+		<!-- ****** -->
+		
+	  
+	  	<!-- TABLA RETOS -->
+	  	<table class="table table-striped table-dark" th:fragment="tablaRetos">
 		  <thead>
 		    <tr>
 		      <th scope="col">Id</th>
@@ -30,9 +81,10 @@
 		    <tr th:each="reto : ${retos}">
 		      <td scope="row" th:text="${reto.id}"></td>
 		      <td th:text="${reto.nombre}"></td>
-		      <td th:text="${reto.enlace}"></td>
+		      <td><a th:href="${reto.enlace}" th:text="${reto.enlace}" target="_blank"></a></td>
 		      <td th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
-		      	<a th:href="#"><i class="material-icons icono-naranja">remove_circle_outline</i></a>		      	
+		      	<a data-toggle="modal" data-target="#modalModificarAsignatura"><i class="material-icons icono-verde">create</i></a>
+		      	<a th:href="@{/asignatura/eliminar-reto(idAsignatura=${asignatura.id}, idReto=${reto.id})}"><i class="material-icons icono-naranja">delete</i></a>		      	
 		      </td>
 		    </tr>
 		  </tbody>
@@ -45,12 +97,18 @@
 			    <td></td>
 			    <td></td>
 			    <td>
-					<button type="button" class="btn btn-naranja">Lanzar Reto</button>
+					<!-- Button trigger modal -->
+					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevoReto">
+						Añadir Reto
+					</button>
 				</td>
 		    </tr>
 		  </tfoot>
-		</table>	  	
+		</table>
+		<!-- ****** -->
+		
 	  	
+	  	<!-- TABLA ALUMNOS -->
 	  	<table class="table table-striped table-dark" th:fragment="tablaAlumnos">
 		  <thead>
 		    <tr>
@@ -91,7 +149,8 @@
 				</td>
 		    </tr>
 		  </tfoot>
-		</table>		
+		</table>
+		<!-- ****** -->		
 		
 		<!-- Optional JavaScript -->
     	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
