Peticiones de deshacer cambiadas a POST

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -51,6 +51,11 @@ div.container{
 	display: inline;
 }
 
+a.enlace-mensaje{
+	text-decoration: underline !important;
+	cursor: pointer;
+}
+
 div.card-deck{
 	margin: 5% 0% 5%;
 }
